Fixed vertical alignment issue in footer

--- a/src/assets/css/index.css
+++ b/src/assets/css/index.css
@@ -104,7 +104,7 @@ html body {
 
 .Footer {
   background-color: #fff;
-  line-height: 60px; /*FIX: Broken on smaller screens*/
+  height: 60px;
 }
 
 @media (min-width: 768px) {
